src/test/ui/issues/issue-53251.stderr
error[E0107]: this associated function takes 0 type arguments but 1 type argument was supplied
  --> $DIR/issue-53251.rs:13:20
   |
LL |                 S::f::<i64>();
   |                    ^------- help: remove these generics
   |                    |
   |                    expected 0 type arguments
...
LL | impl_add!(a b);
   | --------------- in this macro invocation
   |
note: associated function defined here, with 0 type parameters
  --> $DIR/issue-53251.rs:6:8
   |
LL |     fn f() {}
   |        ^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0107]: this associated function takes 0 type arguments but 1 type argument was supplied
  --> $DIR/issue-53251.rs:13:20
   |
LL |                 S::f::<i64>();
   |                    ^------- help: remove these generics
   |                    |
   |                    expected 0 type arguments
...
LL | impl_add!(a b);
   | --------------- in this macro invocation
   |
note: associated function defined here, with 0 type parameters
  --> $DIR/issue-53251.rs:6:8
   |
LL |     fn f() {}
   |        ^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
